fixed save button spacing css

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ header {
   flex-direction: row;
   justify-content: end;
   align-items: center;
+  padding-bottom: 1rem;
 }
 
 .input {
